# ros2-quadro

./: README.md  ftdi_test.py
actuators_calibration/: package.xml  setup.cfg  setup.py
actuators_calibration/actuators_calibration/: dialog_node.py
actuators_calibration/src/actuators_calibration/: dialog_node.py
calibration/: CMakeLists.txt  package.xml
calibration/msg/: MotorSpeed.msg
calibration/src/: publisher.cpp  subscriber.cpp
quadros/: CMakeLists.txt  package.xml
quadros/msg/: Calibration.msg  MotorSpeed.msg  Telemetry.msg
quadros/src/: quadros_gpio.cpp  uart_reader.cpp
quadros_calibration/: CMakeLists.txt  package.xml
quadros_calibration/include/quadros_calibration/: calibration_dialog.hpp  motor_calibration_widget.hpp  sensors_calibration_widget.hpp
quadros_calibration/msg/: MotorSpeed.msg
quadros_calibration/src/: calibration_dialog.cpp  calibration_gui.cpp  main.cpp  motor_calibration_widget.cpp  qcustomplot.cpp  sensors_calibration_widget.cpp
quadros_controller/: CMakeLists.txt  package.xml
quadros_controller/include/quadros_controller/: controller_window.hpp
quadros_controller/src/: controller_window.cpp  main.cpp
quadros_gpio/: CMakeLists.txt  package.xml
quadros_gpio/src/: quadros_gpio.cpp
