<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadros_calibration</name>
  <version>0.0.0</version>
  <description>This is a calibration tools for Quadros Quadcopter.</description>
  <maintainer email="nguyenleminh1002@gmail.com">kelvin_2204</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Qt5Widgets</depend>
  <depend>quadros</depend> -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
