<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadros_gpio</name>
  <version>0.0.1</version>
  <description>Motor control package for quadros using calibration data.</description>
  <maintainer email="quadro@todo.todo">quadro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and Build Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- <depend>quadros_gpio</depend> -->
  <depend>quadros_calibration</depend>
  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
